# kaya-firefox

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
.github/workflows/: sign-extension.yml
doc/: PROMPTS.md
doc/plan/: 2026-02-08-automate-firefox-extension-signing.md  2026-02-08-bundle-xpi-into-platform-installers.md  2026-02-08-r-rename-kaya-to-save-button.md  2026-02-12-01-r-replace-logging-with-fern.md  2026-02-12-02-fix-filename-url-encoding-on-sync.md  2026-02-12-fix-native-messaging-manifest-trailing-comma.md  2026-02-13-fix-url-encoded-filenames-on-download.md  2026-02-13-password-set-indicator.md  PLAN.md
extension/: .prettierrc  amo-metadata.json  background.js  manifest.json
extension/options/: options.html  options.js
extension/popup/: popup.html  popup.js
sync-daemon/: Cargo.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
sync-daemon/installer/: Kaya.Installer.wixproj  Package.wxs  README.md  build.ps1
sync-daemon/manifests/: ca.deobald.Kaya.nativehost.macos.json  ca.deobald.Kaya.nativehost.windows.json  org.savebutton.nativehost.json  org.savebutton.nativehost.linux.json  org.savebutton.nativehost.macos.json  org.savebutton.nativehost.windows.json
sync-daemon/packaging/: build-deb.sh  build-pkg.sh  build-rpm.sh
sync-daemon/src/: main.rs
sync-daemon/tests/: sync_test.rs
