[package]
name = "savebutton-sync-daemon"
version = "1.0.0"
edition = "2021"
authors = ["deobald.ca"]
description = "Native sync daemon for the Save Button Firefox extension"
license = "MIT"

[lib]
name = "savebutton_sync_daemon"
path = "src/lib.rs"

[[bin]]
name = "savebutton-sync-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
ring = "0.17"
rand = "0.8"
chrono = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
log = "0.4"
fern = "0.7"

[profile.release]
opt-level = "z"
lto = true
strip = true
